--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -55,6 +55,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalConstants.cs" />
+    <Compile Include="Interfaces\IAppLifecycleService.cs" />
+    <Compile Include="Interfaces\IClientAppManager.cs" />
     <Compile Include="Interfaces\IModuleInitializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
