--- a/DataTransfer/DataTransfer.csproj
+++ b/DataTransfer/DataTransfer.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BCB646C0-E1F2-4867-9DF2-041C146A2013}</ProjectGuid>
+    <ProjectGuid>{1550D1F5-A405-4809-8847-FEE3B0ABD38A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>ViewModels</RootNamespace>
-    <AssemblyName>ViewModels</AssemblyName>
+    <RootNamespace>DataTransfer</RootNamespace>
+    <AssemblyName>DataTransfer</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,7 @@
     <LangVersion>8</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationFramework" />
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -52,27 +52,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTransferModuleInitializer.cs" />
+    <Compile Include="Helpers\CsvConverter.cs" />
+    <Compile Include="Services\GraphTableTransferService.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{D8DC019C-968D-4CFC-B28E-89B258949F19}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ViewModels\ViewModels.csproj">
+      <Project>{BCB646C0-E1F2-4867-9DF2-041C146A2013}</Project>
+      <Name>ViewModels</Name>
     </ProjectReference>
     <ProjectReference Include="..\Wpf.Tools\Wpf.Tools.csproj">
       <Project>{F3B8943A-CC9E-4604-91A4-C249D733FEB4}</Project>
       <Name>Wpf.Tools</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Commands\GlobalCommands.cs" />
-    <Compile Include="Graph\GraphPointViewModel.cs" />
-    <Compile Include="Graph\GraphViewModel.cs" />
-    <Compile Include="Helpers\GraphViewModelCreator.cs" />
-    <Compile Include="Helpers\MessageBoxHelper.cs" />
-    <Compile Include="Interfaces\IDatabaseService.cs" />
-    <Compile Include="Interfaces\IGraphTableTransferService.cs" />
-    <Compile Include="Interfaces\IStateHub.cs" />
-    <Compile Include="Main\MainViewModel.cs" />
-    <Compile Include="Services\AppLifecycleService.cs" />
-    <Compile Include="ViewModelsModuleInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
